# wintrae-1347

./: README.md  _check_export.py  _check_grading.py  _check_report.py  _check_scan.py  _check_scan2.py  _check_scan3.py  _check_scan4.py  _check_trend.py  _make_test_data2.py  _test_migrate.py  _test_new_features.py  _test_new_features2.py  config.example.yaml  grading_records.json  pyproject.toml  requirements.txt  students.example.csv  students_with_id.csv
src/mpo/: __init__.py  checker.py  cli.py  config.py  grader.py  models.py  namer.py  reporter.py  scanner.py  splitter.py
test_output/: grading_history_张三.csv  grading_history_钢琴一班.json  pack_index.csv  pack_index.md  split_pack_operation_log.csv
test_report/: practice_list.csv  progress_report.md  report.json  trend_summary.csv  trend_summary_week.csv
test_report2/: practice_list.csv  progress_report.md  report.json
