[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-practice-organizer"
version = "1.0.0"
description = "音乐教师批量整理学生练琴音频的命令行工具"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Music Practice Organizer" }]
license = { text = "MIT" }
dependencies = [
    "click>=8.1.0",
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.scripts]
mpo = "mpo.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
